[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src